<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/mainBackground"
    android:onClick="closeKeyboard"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="top|center_horizontal"
        android:layout_width="match_parent"
        android:textColor="@color/mainText"
        android:textColorHint="@color/mainText"
        android:layout_height="wrap_content" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:inputType="text"
            android:textColor="@color/mainText"
            android:textColorHint="@color/hintText"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:textColor="@color/mainText"
            android:textColorHint="@color/hintText"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mainText"
            android:textColorHint="@color/hintText"
            android:inputType="text"
            android:hint="Username" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainButton"
        android:textColor="@color/mainText"
        android:text="@string/register" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:textColor="@color/mainText"
        android:textColorHint="@color/mainText"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>


</LinearLayout>